Fix #658: Menu icon alignment
Make nbviewer .fa rule more specific than the one in
ipywidgets

--- a/nbviewer/static/less/layout.less
+++ b/nbviewer/static/less/layout.less
@@ -9,7 +9,7 @@ body {
   padding: 5px 8px;
 }
 
-.menu-icon {
+.fa.menu-icon {
   line-height: 8px;
   margin-right: 5px;
   position:relative;
